fix: implied default locale in case conversion
per Gradle report

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 .idea
-.gradle
+
+
+# Gradle
+.gradle/
+**/build/
+
+# Local SDK path
+local.properties
+
+# IntelliJ / Android Studio
+.idea/
+*.iml
+
+# OS/editor noise
+.DS_Store
