--- a/.github/workflows/release_update.yml
+++ b/.github/workflows/release_update.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build release APK
         run: ./gradlew assembleRelease
       - name: Rename artifact
-        run: mv build/outputs/apk/**/**/*.apk "${{ github.event.inputs.artifactName }}"
+        run: mv androidApp/build/outputs/apk/release/*.apk "${{ github.event.inputs.artifactName }}"
       - name: Upload artifact
         uses: actions/upload-artifact@v6
         with:
