--- a/.github/workflows/release_update.yml
+++ b/.github/workflows/release_update.yml
@@ -43,6 +43,9 @@ jobs:
             echo keyPassword='${{ secrets.KEY_PASSWORD }}' >> keystore.properties
             echo storeFile='${{ github.workspace }}/key.jks' >> keystore.properties
             echo ${{ secrets.KEYSTORE }} | base64 --decode > ${{ github.workspace }}/key.jks
+          else
+            echo "Missing secret KEYSTORE. Failing build."
+            exit 1
           fi
       - name: Build release APK
         run: ./gradlew assembleRelease
